[gd_scene load_steps=8 format=3 uid="uid://coxcv0iyrx0gj"]

[ext_resource type="Script" uid="uid://c7ukpp6x82jbu" path="res://enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://c82o2r15htki5" path="res://icon.svg" id="1_7k104"]
[ext_resource type="Script" uid="uid://braxlmio5tpyo" path="res://components/health_component.gd" id="3_qi2p4"]
[ext_resource type="PackedScene" uid="uid://6icw8yk2cy6n" path="res://enemy_health_bar.tscn" id="4_iifgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7k104"]
size = Vector2(62, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(62, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qi2p4"]
size = Vector2(68, 73)

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_4gyqm")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_7k104")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_7k104")

[node name="HitboxArea" type="Area2D" parent="." groups=["enemies"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_4gyqm")

[node name="HurtboxArea" type="Area2D" parent="." groups=["enemy_hurtbox"]]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxArea"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_qi2p4")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_qi2p4")

[node name="HealthBar" parent="." instance=ExtResource("4_iifgy")]
custom_minimum_size = Vector2(50, 10)
offset_left = -25.0
offset_top = -50.0
offset_right = 25.0
offset_bottom = -40.0
scale = Vector2(1, 4)

[connection signal="died" from="HealthComponent" to="." method="_on_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_changed"]
